--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>VFM</title><meta name="description" content="Mobx driven form management tool.">
-    <link rel="modulepreload" href="/vfm/assets/app.93b797e6.js"><link rel="modulepreload" href="/vfm/assets/404.html.a963c952.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.1f09f687.js"><link rel="prefetch" href="/vfm/assets/index.html.f4d2f51f.js"><link rel="prefetch" href="/vfm/assets/index.html.07236cef.js"><link rel="prefetch" href="/vfm/assets/index.html.a588f341.js"><link rel="prefetch" href="/vfm/assets/index.html.3a9cfabb.js"><link rel="prefetch" href="/vfm/assets/index.html.74946974.js"><link rel="prefetch" href="/vfm/assets/index.html.38717299.js"><link rel="prefetch" href="/vfm/assets/index.html.68b4b272.js"><link rel="prefetch" href="/vfm/assets/404.0ed39a6a.js"><link rel="prefetch" href="/vfm/assets/Layout.f68bd74b.js"><link rel="prefetch" href="/vfm/assets/BaseForm.5eaffe5e.js"><link rel="prefetch" href="/vfm/assets/ExampleBlock.08711437.js"><link rel="prefetch" href="/vfm/assets/ExampleItem.5b114389.js"><link rel="prefetch" href="/vfm/assets/AddressList.6f60688d.js"><link rel="prefetch" href="/vfm/assets/BaseInfo.02fdfd84.js"><link rel="prefetch" href="/vfm/assets/SchoolList.8c70e3f6.js"><link rel="prefetch" href="/vfm/assets/SelectSchool.ddd473b7.js">
-    <link rel="stylesheet" href="/vfm/assets/style.71a44730.css">
+    <link rel="modulepreload" href="/vfm/assets/app.cc3cf298.js"><link rel="modulepreload" href="/vfm/assets/404.html.85bf341b.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.fd2ff329.js"><link rel="prefetch" href="/vfm/assets/index.html.33fc5159.js"><link rel="prefetch" href="/vfm/assets/index.html.191ae4bf.js"><link rel="prefetch" href="/vfm/assets/index.html.436c5b76.js"><link rel="prefetch" href="/vfm/assets/index.html.4dbefbe7.js"><link rel="prefetch" href="/vfm/assets/index.html.3d2addaf.js"><link rel="prefetch" href="/vfm/assets/index.html.fb221caf.js"><link rel="prefetch" href="/vfm/assets/index.html.5098d7e5.js"><link rel="prefetch" href="/vfm/assets/404.d2b7ec21.js"><link rel="prefetch" href="/vfm/assets/Layout.9382ae89.js">
+    <link rel="stylesheet" href="/vfm/assets/style.7347f695.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vfm/assets/app.93b797e6.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vfm/assets/app.cc3cf298.js" defer></script>
   </body>
 </html>
