--- a/404.html
+++ b/404.html
@@ -22,12 +22,12 @@
 				document.documentElement.classList.toggle('dark', true);
 			}
     </script>
-    <title>VFM</title><meta name="description" content="Mobx driven form management tool.">
-    <link rel="modulepreload" href="/vfm/assets/app.cc3cf298.js"><link rel="modulepreload" href="/vfm/assets/404.html.85bf341b.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.fd2ff329.js"><link rel="prefetch" href="/vfm/assets/index.html.33fc5159.js"><link rel="prefetch" href="/vfm/assets/index.html.191ae4bf.js"><link rel="prefetch" href="/vfm/assets/index.html.436c5b76.js"><link rel="prefetch" href="/vfm/assets/index.html.4dbefbe7.js"><link rel="prefetch" href="/vfm/assets/index.html.3d2addaf.js"><link rel="prefetch" href="/vfm/assets/index.html.fb221caf.js"><link rel="prefetch" href="/vfm/assets/index.html.5098d7e5.js"><link rel="prefetch" href="/vfm/assets/404.d2b7ec21.js"><link rel="prefetch" href="/vfm/assets/Layout.9382ae89.js">
-    <link rel="stylesheet" href="/vfm/assets/style.7347f695.css">
+    <title>VFM</title><meta name="description" content="Vue-Powered form management tool.">
+    <link rel="modulepreload" href="/vfm/assets/app.e419f642.js"><link rel="modulepreload" href="/vfm/assets/404.html.6e888fce.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.8ddb126b.js"><link rel="prefetch" href="/vfm/assets/index.html.5d448a13.js"><link rel="prefetch" href="/vfm/assets/index.html.a2de30ca.js"><link rel="prefetch" href="/vfm/assets/index.html.3868feb0.js"><link rel="prefetch" href="/vfm/assets/index.html.4acd7f01.js"><link rel="prefetch" href="/vfm/assets/index.html.accf6506.js"><link rel="prefetch" href="/vfm/assets/index.html.3730c3af.js"><link rel="prefetch" href="/vfm/assets/index.html.b4d96027.js"><link rel="prefetch" href="/vfm/assets/index.html.39fc66e7.js"><link rel="prefetch" href="/vfm/assets/index.html.81c9c735.js"><link rel="prefetch" href="/vfm/assets/index.html.efc6de4c.js"><link rel="prefetch" href="/vfm/assets/index.html.1b6b6d33.js"><link rel="prefetch" href="/vfm/assets/404.f9e8dda4.js"><link rel="prefetch" href="/vfm/assets/Layout.16218bb3.js">
+    <link rel="stylesheet" href="/vfm/assets/style.354ec75b.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vfm/assets/app.cc3cf298.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vfm/assets/app.e419f642.js" defer></script>
   </body>
 </html>
