--- a/404.html
+++ b/404.html
@@ -23,11 +23,11 @@
 			}
     </script>
     <title>VFM</title><meta name="description" content="Vue-Powered form management tool.">
-    <link rel="modulepreload" href="/vfm/assets/app.e419f642.js"><link rel="modulepreload" href="/vfm/assets/404.html.6e888fce.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.8ddb126b.js"><link rel="prefetch" href="/vfm/assets/index.html.5d448a13.js"><link rel="prefetch" href="/vfm/assets/index.html.a2de30ca.js"><link rel="prefetch" href="/vfm/assets/index.html.3868feb0.js"><link rel="prefetch" href="/vfm/assets/index.html.4acd7f01.js"><link rel="prefetch" href="/vfm/assets/index.html.accf6506.js"><link rel="prefetch" href="/vfm/assets/index.html.3730c3af.js"><link rel="prefetch" href="/vfm/assets/index.html.b4d96027.js"><link rel="prefetch" href="/vfm/assets/index.html.39fc66e7.js"><link rel="prefetch" href="/vfm/assets/index.html.81c9c735.js"><link rel="prefetch" href="/vfm/assets/index.html.efc6de4c.js"><link rel="prefetch" href="/vfm/assets/index.html.1b6b6d33.js"><link rel="prefetch" href="/vfm/assets/404.f9e8dda4.js"><link rel="prefetch" href="/vfm/assets/Layout.16218bb3.js">
+    <link rel="modulepreload" href="/vfm/assets/app.db1850dc.js"><link rel="modulepreload" href="/vfm/assets/404.html.ff2e1a62.js"><link rel="modulepreload" href="/vfm/assets/404.html.e275e9a9.js"><link rel="prefetch" href="/vfm/assets/index.html.97f9f2fc.js"><link rel="prefetch" href="/vfm/assets/index.html.d3adf0c7.js"><link rel="prefetch" href="/vfm/assets/index.html.c394bdda.js"><link rel="prefetch" href="/vfm/assets/index.html.708d77fc.js"><link rel="prefetch" href="/vfm/assets/index.html.9797887a.js"><link rel="prefetch" href="/vfm/assets/index.html.5d4a620d.js"><link rel="prefetch" href="/vfm/assets/index.html.df39069e.js"><link rel="prefetch" href="/vfm/assets/index.html.285ae757.js"><link rel="prefetch" href="/vfm/assets/index.html.99a42d1b.js"><link rel="prefetch" href="/vfm/assets/index.html.3ccef46a.js"><link rel="prefetch" href="/vfm/assets/index.html.77dfabcd.js"><link rel="prefetch" href="/vfm/assets/index.html.2512e3e2.js"><link rel="prefetch" href="/vfm/assets/404.4028bf76.js"><link rel="prefetch" href="/vfm/assets/Layout.0d6e68b3.js">
     <link rel="stylesheet" href="/vfm/assets/style.354ec75b.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/vfm/assets/app.e419f642.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>That&#39;s a Four-Oh-Four.</blockquote><a href="/vfm/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/vfm/assets/app.db1850dc.js" defer></script>
   </body>
 </html>
